2005-10-18  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for RC1 release.

2005-10-14  Donnie Berkholz  <spyderous@gentoo.org>

	* configure.ac: Add another set of brackets around DEFAULTVT's empty default
	setting so it isn't treated as a command.

2005-10-05  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* Makefile.am: Use CLEANFILES for all generated files

2005-09-28  Kristian Høgsberg  <krh@redhat.com>

	* config/Makefile.am (EXTRA_DIST): Add Xservers.fs.

2005-08-17  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	* Makefile.am:
	Fix EXTRA_DIST to point to a real variable.  Bump to 0.99.1.