@@ -29,8 +29,9 @@ AM_MAINTAINER_MODE
 AM_CONFIG_HEADER(config.h)
 
 AC_PROG_CC
+AC_LIBTOOL_WIN32_DLL
+AM_PROG_LIBTOOL
 AC_PROG_INSTALL
-AC_CANONICAL_HOST
 
 XORG_PROG_RAWCPP
 
@@ -207,7 +208,6 @@ PKG_CHECK_MODULES(XPROTO, xproto)
 XDM_CFLAGS="$XDM_CFLAGS $XDM_PRINT_CFLAGS $DMCP_CFLAGS $XPROTO_CFLAGS $OS_CFLAGS"
 XDM_LIBS="$XDM_LIBS $XDM_PRINT_LIBS $DMCP_LIBS"
 
-
 AC_CHECK_LIB(Xdmcp, XdmcpWrap, [xdmauth="yes"], [xdmauth="no"], [$DMCP_LIBS])
 AC_SEARCH_LIBS(crypt, crypt)
 
@@ -215,6 +215,19 @@ AM_CONDITIONAL(HAS_XDM_AUTH, test x$xdmauth = xyes)
 
 AC_SUBST(XDM_CFLAGS)
 AC_SUBST(XDM_LIBS)
+
+#
+# Greeter
+#
+
+XDMGREET_CFLAGS="$XDMGREET_CFLAGS $DMCP_CFLAGS $XPROTO_CFLAGS $OS_CFLAGS"
+XDMGREET_LIBS="$XDMGREET_LIBS $DMCP_LIBS"
+
+GREETERLIB="${XDMDIR}/libXdmGreet.so"
+AC_DEFINE_DIR(DEF_GREETER_LIB, GREETERLIB, [Location of Xdm Greeter library])
+
+AC_SUBST(XDMGREET_CFLAGS)
+AC_SUBST(XDMGREET_LIBS)
 
 #
 # Chooser
@@ -229,4 +242,4 @@ AC_SUBST(CHOOSER_LIBS)
 XORG_MANPAGE_SECTIONS
 XORG_RELEASE_VERSION
 
-AC_OUTPUT([Makefile config/Makefile])
+AC_OUTPUT([Makefile config/Makefile greeter/Makefile])
